# rl-research-template

./: LICENSE  Makefile  README.md  pyproject.toml
mylib/: logger.py
notebooks/: example.ipynb  sample.ipynb
src/: main.py
