[tool.poetry]
name = "ml-research-template"
version = "0.1.0"
description = ""
authors = ["shimoshida <moshimoshimoshida@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_research_template"}]

[tool.poetry.dependencies]
python = "^3.10"
wandb = "^0.15.3"
hydra-core = "^1.3.2"
torch = "^2.0.1"
pfrl = {git = "https://github.com/shimoshida/pfrl.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
