[tool.poetry]
name = "ml-research-template"
version = "0.1.0"
description = ""
authors = ["shimoshida <moshimoshimoshida@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_research_template"}]

[tool.poetry.dependencies]
python = "^3.10"
wandb = "^0.15.3"
hydra-core = "^1.3.2"
torch = "^2.0.1"
notebook = "^7.0.4"
matplotlib = "^3.8.0"
tensorboardx = "^2.6.2.2"
tensorboard = "^2.14.1"
moviepy = "^1.0.3"
gymnasium = {extras = ["accept-rom-license", "atari", "toy-text"], version = "^0.29.1"}
opencv-python = "^4.8.1.78"
torch-tb-profiler = "^0.4.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
